--- a/18190_18343_ProjetoED/app/src/main/res/layout/activity_main.xml
+++ b/18190_18343_ProjetoED/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:orientation="vertical"
+    tools:context=".MainActivity" >
+
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/txtDe"
+        android:layout_width="56dp"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginTop="5dp"
+        android:text="De:"
+        android:textSize="25dp"
+        />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Spinner
+        android:id="@+id/spinnerDe"
+        android:layout_width="283dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="52dp"
+        android:layout_marginTop="-28dp"
+        />
+
+
+    <TextView
+        android:id="@+id/txtPara"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Para:"
+        android:textSize="25dp" />
+
+    <Spinner
+        android:id="@+id/spinnerPara"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="59dp"
+        android:layout_marginTop="-29dp"/>
+
+    <Button
+        android:id="@+id/btnBuscar"
+        android:layout_width="145dp"
+        android:layout_height="wrap_content"
+        android:text="Buscar"
+        android:layout_marginTop="35dp"
+        android:layout_marginLeft="5dp"
+        />
+
+    <ImageView
+        android:id="@+id/imgMapa"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        app:srcCompat="@drawable/mapaep" />
+
+    <TextView
+        android:id="@+id/txtResultados"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Resultados"
+        android:textSize="25dp"
+        android:layout_marginTop="50dp"/>
+    <Button
+        android:id="@+id/btnNovaCidade"
+        android:layout_width="149dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="132dp"
+        android:text="+Cidade" />
+
+    <Button
+         android:id="@+id/btnNovoCaminho"
+         android:layout_width="149dp"
+         android:layout_height="wrap_content"
+         android:layout_marginLeft="200dp"
+         android:layout_marginTop="0dp"
+         android:text="+Caminho" />
+
+</LinearLayout>
+
