--- a/18190_18343_ProjetoED/app/src/main/res/layout/activity_main.xml
+++ b/18190_18343_ProjetoED/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="52dp"
         android:layout_marginTop="-28dp"
+        android:textSize="55dp"
         />
 
 
@@ -45,7 +46,7 @@
         android:layout_width="145dp"
         android:layout_height="wrap_content"
         android:text="Buscar"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="15dp"
         android:layout_marginLeft="5dp"
         />
 
