--- a/18190_18343_ProjetoEd2/18190_18343_ProjetoEd2/app/src/main/res/layout/activity_main.xml
+++ b/18190_18343_ProjetoEd2/18190_18343_ProjetoEd2/app/src/main/res/layout/activity_main.xml
@@ -72,6 +72,7 @@
         android:layout_marginTop="10dp"/>
     <ListView
         android:layout_width="match_parent"
+        android:id="@+id/lst"
         android:layout_height="200dp"></ListView>
     <LinearLayout
         android:layout_width="match_parent"
