--- a/18190_18343_ProjetoEd2/18190_18343_ProjetoEd2/app/src/main/res/layout/activity_main.xml
+++ b/18190_18343_ProjetoEd2/18190_18343_ProjetoEd2/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,12 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="59dp"
         android:layout_marginTop="-29dp"/>
+    <Spinner
+        android:id="@+id/spinnerE"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="59dp"
+        android:layout_marginTop="0dp"/>
 
     <Button
         android:id="@+id/btnBuscar"
