--- a/18190_18343_ProjetoEd2/18190_18343_ProjetoEd2/app/src/main/res/layout/activity_main.xml
+++ b/18190_18343_ProjetoEd2/18190_18343_ProjetoEd2/app/src/main/res/layout/activity_main.xml
@@ -76,10 +76,11 @@
         android:text="Resultados"
         android:textSize="25dp"
         android:layout_marginTop="10dp"/>
-    <ListView
+    <EditText
         android:layout_width="match_parent"
-        android:id="@+id/lst"
-        android:layout_height="200dp"></ListView>
+        android:id="@+id/txtDistTemp"
+        android:enabled="false"
+        android:layout_height="50dp"></EditText>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
