--- a/18190_18343_ProjetoEd2/18190_18343_ProjetoEd2/app/src/main/res/layout/activity_tela_caminho.xml
+++ b/18190_18343_ProjetoEd2/18190_18343_ProjetoEd2/app/src/main/res/layout/activity_tela_caminho.xml
@@ -1,67 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context=".TelaCaminho">
 
-    <TextView
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/my_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="?attr/actionBarSize"
+        android:background="#2ADB87"
+        android:elevation="10dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Novo Caminho"
+            android:textColor="@android:color/black"
+            android:textSize="26dp"
+            android:gravity="center"
+            ></TextView>
+    </androidx.appcompat.widget.Toolbar>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_marginStart="50dp">
+
+    <TextView
+        android:layout_width="92dp"
+        android:layout_height="36dp"
         android:text="Origem:"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="226dp" />
-    <TextView
-        android:id="@+id/txtOrigem"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:textSize="22dp"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="85dp" />
+        <Spinner
+        android:id="@+id/spinnerDe"
+        android:layout_width="200dp"
 
-    <TextView
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Destino:"
-        tools:layout_editor_absoluteX="-16dp"
-        tools:layout_editor_absoluteY="258dp" />
-    <TextView
-        android:id="@+id/txtDestino"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_marginLeft="00dp"
+        android:layout_marginTop="0dp"
+        android:textSize="55dp"
+        />
 
+    <TextView
+        android:layout_width="94dp"
+        android:layout_height="26dp"
+        android:text="Destino:"
+        android:textSize="22dp"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="162dp" />
+        <Spinner
+            android:id="@+id/spinnerPara"
+            android:layout_width="200dp"
+
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="00dp"
+            android:layout_marginTop="0dp"
+            android:textSize="55dp"
+            />
+
+    <TextView
+        android:layout_width="103dp"
+        android:layout_height="32dp"
+        android:text="Distância:"
+        android:textSize="22dp"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="232dp" />
+
+    <EditText
+        android:id="@+id/txtDistancia"
+        android:layout_width="200dp"
+        android:layout_height="29dp"
+        tools:layout_editor_absoluteX="127dp"
+        tools:layout_editor_absoluteY="232dp" />
+
+    <TextView
+        android:layout_width="79dp"
+        android:layout_height="28dp"
+        android:text="Tempo:"
+        android:textSize="22dp"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="308dp" />
+
+    <EditText
+        android:id="@+id/txtTempo"
+        android:layout_width="200dp"
+        android:layout_height="26dp"
+        tools:layout_editor_absoluteX="127dp"
+        tools:layout_editor_absoluteY="310dp" />
     <Button
         android:id="@+id/btnAddCaminho"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="139dp"
+        android:layout_height="51dp"
+        android:background="#2ADB87"
         android:text="Adicionar"
-        tools:layout_editor_absoluteX="-29dp"
-        tools:layout_editor_absoluteY="425dp" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Distância:"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="309dp" />
-
-    <TextView
-        android:id="@+id/txtDistancia"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="309dp" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Tempo:"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="356dp" />
-
-    <TextView
-        android:id="@+id/txtTempo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="356dp" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        tools:layout_editor_absoluteX="136dp"
+        tools:layout_editor_absoluteY="414dp" />
+    </LinearLayout></LinearLayout>
