--- a/18190_18343_ProjetoEd2/18190_18343_ProjetoEd2/app/src/main/res/layout/activity_tela_cidade.xml
+++ b/18190_18343_ProjetoEd2/18190_18343_ProjetoEd2/app/src/main/res/layout/activity_tela_cidade.xml
@@ -1,51 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".TelaCidade">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/my_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="#2ADB87"
+        android:elevation="10dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Nova Cidade"
+            android:textColor="@android:color/black"
+            android:textSize="26dp"
+            android:gravity="center"
+            ></TextView>
+
+    </androidx.appcompat.widget.Toolbar>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:paddingStart="50dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
     <TextView
         android:id="@+id/txt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="173dp"
+        android:layout_height="38dp"
         android:text="Nome da cidade:"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="120dp" />
+        android:textSize="22dp"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="112dp" />
 
-    <TextView
+    <EditText
         android:id="@+id/txtNomeCidade"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="-62dp"
-        tools:layout_editor_absoluteY="120"
-        android:layout_marginLeft="132dp"/>
+        android:layout_width="210dp"
+        android:layout_height="40dp"
+        tools:layout_editor_absoluteX="181dp"
+        tools:layout_editor_absoluteY="110dp" />
 
 
     <TextView
         android:id="@+id/txtCordX"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="147dp"
+        android:layout_height="34dp"
         android:text="Coordenada X:"
-        tools:layout_editor_absoluteX="-62dp"
-        tools:layout_editor_absoluteY="153dp" />
+        android:textSize="22dp"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="190dp" />
+
     <EditText
         android:id="@+id/coordX"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="numberDecimal"
-        tools:layout_editor_absoluteX="99dp"
-        tools:layout_editor_absoluteY="132dp" />
+        tools:layout_editor_absoluteX="182dp"
+        tools:layout_editor_absoluteY="179dp" />
 
     <TextView
         android:id="@+id/txtCordY"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="149dp"
+        android:layout_height="34dp"
         android:text="Coordenada Y:"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="184dp" />
+        android:textSize="22dp"
+        tools:layout_editor_absoluteX="5dp"
+        tools:layout_editor_absoluteY="260dp" />
 
     <EditText
         android:id="@+id/coordY"
@@ -53,15 +81,16 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="numberDecimal"
-        tools:layout_editor_absoluteX="99dp"
-        tools:layout_editor_absoluteY="189dp" />
+        tools:layout_editor_absoluteX="181dp"
+        tools:layout_editor_absoluteY="249dp" />
 
     <Button
         android:id="@+id/btnAddCidade"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="112dp"
+        android:layout_height="56dp"
         android:text="Adicionar"
-        tools:layout_editor_absoluteX="156dp"
-        tools:layout_editor_absoluteY="411dp" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:background="#2ADB87"
+        tools:layout_editor_absoluteX="152dp"
+        tools:layout_editor_absoluteY="361dp" />
+    </LinearLayout>
+</LinearLayout>
