--- a/18190_18343_ProjetoEd2/18190_18343_ProjetoEd2/app/src/main/res/layout/activity_main.xml
+++ b/18190_18343_ProjetoEd2/18190_18343_ProjetoEd2/app/src/main/res/layout/activity_main.xml
@@ -80,7 +80,12 @@
         android:layout_width="match_parent"
         android:id="@+id/txtDistTemp"
         android:enabled="false"
+        android:focusable="false"
         android:layout_height="50dp"></EditText>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -98,6 +103,14 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="0dp"
         android:text="+Caminho" />
+    </LinearLayout>
+        <Button
+            android:id="@+id/btnCriarArquivos"
+            android:layout_width="149dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="Recriar arquivos" />
     </LinearLayout>
 </LinearLayout>
 </ScrollView>
